src/web/themes/custom/workbc/scss/components/_card-feature.scss
.card-feature {
  margin-bottom: 24px;
  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
  background-color: $workbc_palette_light_secondary;
  border: 2px solid #accad7;

  @include media-breakpoint-up(lg) {
    display: flex;
    align-items: center;
    justify-content: space-between;
    align-items: stretch;
    column-gap: 30px;
  }

  li:not(:last-child) {
    margin-bottom: 20px;
  }
}

.card-feature__image {
  @include media-breakpoint-up(lg) {
    flex: 0 1 50%;
    overflow: hidden;
  }
}

.card-feature__image .img-fluid {
  width: 100%;

  @include media-breakpoint-up(lg) {
    object-fit: cover;
    height: 100%;
  }
}

.card-feature__content {
  padding: 20px;

  @include media-breakpoint-up(lg) {
    flex: 0 1 50%;
    padding: 20px 0;
  }
}

.card-feature__title {
  margin-bottom: 20px;
  font-size: 1.3125rem;
}

body:not(.front) .card-feature__link {
  @include btn-blue;
}

// Homepage Featured Card Variation
.front .card-feature {
  border: none;
}

.front .card-feature__content {

  @include media-breakpoint-up(lg) {
    padding: 30px 20px;
  }
}

.front .card-feature__content ul {
  margin-bottom: 30px;
}

.front .card-feature__image,
.card-feature--right .card-feature__image {
  @include media-breakpoint-up(lg) {
    order: 2;
  }
}

.card-feature--left .card-feature__image {
  @include media-breakpoint-up(lg) {
    order: 0;
  }
}

.front .card-feature__title {
  font-size: 1.875rem;
}

.front .card-feature__link {
  @include link-chevron;
}


.paragraph--key--explore-careers .card-feature__content {
  background: linear-gradient(
    90deg,
    rgba(218, 235, 240, 1) 0%,
    rgba(242, 242, 242, 1) 96%
  );

  @include media-breakpoint-up(lg) {
    padding: 30px 20px;
  }
}

.paragraph--key--explore-labour-market {
  background-color: #f2f2f2;

  .card-feature__content {
    @include media-breakpoint-up(lg) {
      padding: 30px 20px;
    }
  }
}

